[project]
name = "bullviso-tools"
version = "0.1.0"
description = """
A standalone collection of Python utility scripts for setting up and analysing
computational chemical calculations using the outputs of `bullviso`
(github.com/conorrankine/bullviso).
"""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdkit>=2025.9.3",
    "pandas>=2.3.3",
    "typer>=0.20.1",
]

[tool.setuptools.packages.find]
include = ["bullviso_tools", "scripts"]

[project.scripts]
deduplicate = "scripts.deduplicate:app"
energy-summary = "scripts.energy_summary:app"
aggregate-pop-by-isomer = "scripts.aggregate_pop_by_isomer:app"
select-by-energy-threshold = "scripts.select_by_energy_threshold:app"
